# csfloat-sales-parser

./: .gitignore  LICENSE  README.md  config.toml  docker-compose.yml  pyproject.toml
src/parser/: __init__.py  api_parser.py  backup.py  base_parser.py  config.py  config_loader.py  database.py  db_worker.py  enums.py  factory.py  main.py  models.py  parser.py
